<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_category_user">
        <Preference
            android:key="users"
            android:layout="@layout/layout_prefs"
            android:summary="@string/settings_users_summary"
            android:title="@string/settings_users_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="website"
            android:layout="@layout/layout_prefs"
            android:summaryOn="@string/settings_web_on"
            android:summaryOff="@string/settings_web_off"
            android:title="@string/settings_web_title" />
    </PreferenceCategory>
    <!--
        <PreferenceCategory android:title="@string/settings_category_language">

                    <ListPreference
                        android:key="language"
                        android:title="@string/settings_language_title"
                        android:summary="@string/settings_language_summary"
                        android:entries="@array/language"
                        android:entryValues="@array/language_value"/>

    </PreferenceCategory>
    -->
    <PreferenceCategory android:title="@string/settings_category_about">
        <Preference
            android:layout="@layout/layout_prefs"
            android:summary="@string/settings_about_content"
            android:title="@string/settings_about_title" />

        <Preference
            android:key="version"
            android:layout="@layout/layout_prefs"
            android:title="@string/settings_version_title" />
    </PreferenceCategory>
</PreferenceScreen>